updates to SAN Toolkit references

--- a/hu-aix-70.adoc
+++ b/hu-aix-70.adoc
@@ -50,7 +50,7 @@ The NetApp AIX Host Utilities software package is available on the link:https://
 
 . Go to the directory containing the download.
 
-. Decompress the file and extract the SAN toolkit software package:
+. Decompress the file and extract the SAN Toolkit software package:
 +
 `# tar -xvf ntap_aix_host_utilities_7.0.tar.gz`
 
@@ -61,7 +61,7 @@ The following directory is created when you decompress the file: `ntap_aix_host_
 +
 `# installp -aXYd /var/tmp/ntap_aix_host_utilities_7.0/MPIO NetApp.MPIO_Host_Utilities_Kit`
 
-. Install the SAN toolkit:
+. Install the SAN Toolkit:
 +
 `# installp -aXYd /var/tmp/ntap_aix_host_utilities_7.0/SAN_Tool_Kit/NetApp.SAN_toolkit`
 
@@ -138,6 +138,6 @@ data_vserver   /vol/vol4/lun4 hdisk14 fcs0   FCP      20g C
 ----
 
 [NOTE] 
-This toolkit is common across all Host Utilities configurations and protocols. As a result, some of its contents apply to one configuration, but not another. Having unused components does not affect your system performance. The SAN toolkit is supported on AIX and PowerVM/VIOS OS versions.
+This toolkit is common across all Host Utilities configurations and protocols. As a result, some of its contents apply to one configuration, but not another. Having unused components does not affect your system performance. The SAN Toolkit is supported on AIX and PowerVM/VIOS OS versions.
 
 // 2024 Sep 06, AIX 7.0
