--- a/hu_aix_72.adoc
+++ b/hu_aix_72.adoc
@@ -52,7 +52,7 @@ The following directory is created when you decompress the file: `ntap_aix_host_
 
 . Reboot the host.
 
-== SAN toolkit
+== SAN Toolkit
 
 include::_include/hu/reuse_hu_san_toolkit_withoutexample.adoc[]
 
