--- a/hu_rhel_94.adoc
+++ b/hu_rhel_94.adoc
@@ -19,7 +19,7 @@ You can use the ONTAP SAN host configuration settings to configure Red Hat Enter
 
 include::_include/hu/reuse_hu_installing_luhu_without32.adoc[]
 
-== SAN Tool Kit
+== SAN Toolkit
 
 include::_include/hu/reuse_hu_san_toolkit_withoutexample.adoc[]
 
