--- a/hu_solaris_113.adoc
+++ b/hu_solaris_113.adoc
@@ -64,7 +64,7 @@ The `host_config` command does the following:
 . Reboot the host.
 
 
-== SAN toolkit
+== SAN Toolkit
 
 include::_include/hu/reuse_hu_san_toolkit_withoutexample.adoc[]
 
