--- a/hu_sles_15SP5.adoc
+++ b/hu_sles_15SP5.adoc
@@ -22,7 +22,7 @@ include::_include/hu/reuse_hu_installing_luhu_with32.adoc[]
 
 include::_include/hu/reuse_hu_cloud_note.adoc[]
 
-== SAN toolkit
+== SAN Toolkit
 
 include::_include/hu/reuse_hu_san_toolkit.adoc[]
 
