--- a/hu_sles_15SP6.adoc
+++ b/hu_sles_15SP6.adoc
@@ -21,7 +21,7 @@ include::_include/hu/reuse_hu_installing_luhu_with32.adoc[]
 
 include::_include/hu/reuse_hu_cloud_note.adoc[]
 
-== SAN toolkit
+== SAN Toolkit
 
 include::_include/hu/reuse_hu_san_toolkit.adoc[]
 
