consistency in use of NetApp and HU  product titles

--- a/_include/hu/reuse_hu_installing_luhu.adoc
+++ b/_include/hu/reuse_hu_installing_luhu.adoc
@@ -8,7 +8,7 @@ NetApp strongly recommends installing the Linux Unified Host Utilities, but it i
 +
 `rpm -e netapp_linux_unified_host_utilities-7-1`
 +
-For older versions of Linux Host Utilities, go to the directory where the host utility software is installed and enter the `uninstall` command.
+For older versions of Linux Unified Host Utilities, go to the directory where the host utility software is installed and enter the `uninstall` command.
 
 .	Download either the 32-bit or 64-bit Linux Unified Host Utilities software package from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] to your host.
 
