--- a/hu_aix_rn.adoc
+++ b/hu_aix_rn.adoc
@@ -4,7 +4,6 @@ permalink: hu_aix_rn.html
 keywords: host utilities, aix, 6.1 netapp, 7.0, ontap, powervm
 summary: Release Notes for AIX Host Utilities 6.1
 ---
-
 = AIX Host Utilities Release Notes
 :hardbreaks:
 :toclevels: 1
@@ -20,11 +19,11 @@ For specific information about the operating system versions and updates that th
 
 == What's new
 
-Recent releases of AIX Host Utilities contain the following new features and enhancements:
+The AIX Host Utilities releases contain the following new features and enhancements:
 
 * AIX Host Utilities 7.0 supports SCSI UNMAP on the AIX host OS. With AIX Host Utilities 7.0, SCSI thin provisioning functions seamlessly with AIX and NetApp LUNs for FC devices.
 
-* AIX Host Utilities 6.1 added support for the memory fault issue that occurred in earlier versions of the AIX host OS. With AIX Host Utilities 6.1, only the sanlun binary has changed. The MPIO and related ODM remain unchanged.
+* AIX Host Utilities 6.1 includes support for the memory fault issue that occurred in earlier versions of the AIX host OS. With AIX Host Utilities 6.1, only the sanlun binary has changed. The MPIO and related ODM remain unchanged.
 
 == Known problems and limitations
 You should be aware of the following known problems and limitations that might impact performance on your specific host.
@@ -33,7 +32,7 @@ You should be aware of the following known problems and limitations that might i
 |===
 |Bug ID	|Title	|Description
 |N/A
-|SCSI UNMAP support for NetApp ONTAP iSCSI LUNs |AIX Host Utilities 7.0 only supports the SCSI UNMAP feature for FC devices. SCSI UNMAP support for iSCSI devices are not included in this release.
+|SCSI UNMAP support for ONTAP iSCSI LUNs |AIX Host Utilities 7.0 only supports the SCSI UNMAP feature for FC devices. SCSI UNMAP support for iSCSI devices are not included in this release.
 |link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1069147[1069147^]
 |AIX HU Sanlun reports incorrect HBA speed	|Instances of sanlun displaying incorrect HBA speeds are reported while running the `sanlun fcp show adapter –v` command.  The `sanlun fcp show adapter –v` command displays the HBA cards information, such as supported and negotiated speeds for the adapters. This seems to be a reporting issue only. To identify the actual speed, use the `fcstat fcsx` command.
 |===
