--- a/hu_solaris_114.adoc
+++ b/hu_solaris_114.adoc
@@ -116,7 +116,7 @@ NOTE: All SAN Arrays (ASA) configurations are supported beginning ONTAP 9.8 for 
 
 == Recommended settings
 
-NetApp recommends using the following parameter settings for Solaris 11.4 SPARC and x86_64 with NetApp ONTAP LUNs. These parameter values are set by Host Utilities. For additional Solaris 11.4 system settings, see Oracle DOC ID: 2595926.1.
+NetApp recommends using the following parameter settings for Solaris 11.4 SPARC and x86_64 with ONTAP LUNs. These parameter values are set by Host Utilities. For additional Solaris 11.4 system settings, see Oracle DOC ID: 2595926.1.
 
 [cols=2*, options="header"]
 |===
