--- a/hu_ubuntu_2004.adoc
+++ b/hu_ubuntu_2004.adoc
@@ -17,7 +17,7 @@ summary: Describes how to use Ubuntu 20.04 with ONTAP
 You can use the ONTAP SAN host configuration settings to configure Ubuntu 20.04 with ONTAP as the target. 
 
 [NOTE]
-NetApp Linux Unified Host Utilities software package is not available for Ubuntu 20.04 OS.
+The NetApp Linux Unified Host Utilities software package is not available for Ubuntu 20.04 OS.
 
 == SAN booting
 
