--- a/hu_windows_2012r2.adoc
+++ b/hu_windows_2012r2.adoc
@@ -34,7 +34,7 @@ NOTE: Go to the link:https://www.catalog.update.microsoft.com/Search.aspx?q=Upda
 
 include::_include/windows/reuse_windows_hotfix_install.adoc[]
 
-== Install the Windows Unified Host Utilities
+== Install the Windows Host Utilities
 
 include::_include/windows/reuse_windows_installing_WUHU.adoc[]
 
@@ -42,7 +42,7 @@ include::_include/windows/reuse_windows_installing_WUHU.adoc[]
 
 include::_include/windows/reuse_windows_multipathing.adoc[]
 
-NOTE: When you select MPIO support, the Windows Unified Host Utilities enables the included MPIO feature of Windows Server 2012 R2.
+NOTE: When you select MPIO support, the Windows Host Utilities enables the included MPIO feature of Windows Server 2012 R2.
 
 == SAN configuration
 
