--- a/hu_hpux_60.adoc
+++ b/hu_hpux_60.adoc
@@ -2,10 +2,9 @@
 sidebar: sidebar
 permalink: hu_hpux_60.html
 keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
-summary: Describes how to use the HP-UX Unified Host Utilities 6.0 with ONTAP
+summary: Describes how to use the HP-UX Host Utilities 6.0 with ONTAP storage
 ---
-
-= HP-UX Host Utilities 6.0
+= HP-UX Host Utilities 6.0 for ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -14,7 +13,7 @@ summary: Describes how to use the HP-UX Unified Host Utilities 6.0 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-The HP-UX Host Utilities enable you to connect an HP-UX host to NetApp storage.
+The NetApp HP-UX Host Utilities enable you to connect an HP-UX host to ONTAP storage.
 
 The HP-UX Host Utilities supports multiple protocols and the following environments:
 
@@ -33,7 +32,7 @@ You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=7110
 
 .About this task
 
-The NetApp HP-UX Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.0/downloads[NetApp Support Site^] in a compressed file. After you download the file, you must decompress it before installation.
+The HP-UX Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.0/downloads[NetApp Support Site^] in a compressed file. After you download the file, you must decompress it before installation.
 
 .Steps
 
