--- a/hu_hpux_60_cmd.adoc
+++ b/hu_hpux_60_cmd.adoc
@@ -4,7 +4,6 @@ permalink: hu_hpux_60_cmd.html
 keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 ---
-
 = HP-UX Host Utilities 6.0 command reference
 :hardbreaks:
 :toclevels: 1
@@ -13,9 +12,8 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :linkattrs:
 :imagesdir: ./media/
 
-
 [.lead]
-You can use the HP-UX Unified Host Utilities 6.0 sample command reference for an end-to-end validation of the NetApp storage configuration using the host utilities tool.
+You can use the HP-UX Host Utilities 6.0 sample command reference for an end-to-end validation of the ONTAP storage configuration using the host utilities tool.
 
 == List all host initiators mapped to host
 
