--- a/hu_solaris_113.adoc
+++ b/hu_solaris_113.adoc
@@ -121,7 +121,7 @@ NOTE: All SAN Arrays (ASA) configurations are supported beginning in ONTAP 9.8 f
 
 == Recommended settings
 
-Following are some parameter settings that are recommended for Solaris 11.3 SPARC and x86_64 with NetApp ONTAP LUNs. These parameter values are set by Host Utilities.
+Following are some parameter settings that are recommended for Solaris 11.3 SPARC and x86_64 with ONTAP LUNs. These parameter values are set by Host Utilities.
 
 [cols=2*, options="header"]
 |===
