--- a/hu_solaris_62.adoc
+++ b/hu_solaris_62.adoc
@@ -4,8 +4,7 @@ permalink: hu_solaris_62.html
 keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 ---
-
-= Install Solaris Host Utilities 6.2
+= Install Solaris Host Utilities 6.2 for ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -14,14 +13,14 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-The Solaris Unified Host Utilities assists you in managing NetApp ONTAP storage attached to a Solaris host.
+The NetApp Solaris Host Utilities assists you in managing ONTAP storage attached to a Solaris host.
 
 The Solaris Host Utilities 6.2 supports several Solaris environments and multiple protocols. The primary host utilities environments are: 
 
 * Native OS with MPxIO with either the Fibre Channel (FC) or iSCSI protocol on a system using either a SPARC processor or an x86/64 processor.
 * Veritas Dynamic Multipathing (DMP) with either the FC or iSCSI protocol on a system using a SPARC processor, or the iSCSI protocol on a system using an x86/64 processor.
 
-The Solaris Unified Host Utilities 6.2 continues to support the following versions of Solaris:
+The Solaris Host Utilities 6.2 continues to support the following versions of Solaris:
 
 *	Solaris 11.x series
 *	Solaris 10.x series
@@ -34,7 +33,7 @@ You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=7110
 
 
 [NOTE]
-The NetApp Solaris Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.2/downloads[NetApp Support Site^] in a compressed  file format for your processor. You can download the Host Utilities software package for your environment from the Support site.
+The Solaris Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.2/downloads[NetApp Support Site^] in a compressed  file format for your processor. You can download the Host Utilities software package for your environment from the Support site.
 
 .Steps
 
@@ -53,11 +52,11 @@ At the time this documentation was prepared, the compressed files were called:
 +
 `# gunzip netapp_solaris_host_utilities_6_2_sparc.tar.gz`
 
-. Unzip the file. You can use the `tar xvf` command to do this.
+. Unzip the file ysing the `tar xvf` command:
 +
 `# tar xvf netapp_solaris_host_utilities_6_2_sparc.tar`
 
-. Add the packages that you extracted from tar file to your host. You can use the `pkgadd` command to do this.
+. Add the packages that you extracted from tar file to your host.
 +
 The packages are added to the `/opt/NTAP/SANToolkit/bin` directory. The following example uses the `pkgadd` command to install the Solaris installation package:
 +
