--- a/hu_solaris_62_cmd.adoc
+++ b/hu_solaris_62_cmd.adoc
@@ -4,7 +4,6 @@ permalink: hu_solaris_62_cmd.html
 keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 ---
-
 = Solaris Host Utilities 6.2 command reference 
 :hardbreaks:
 :toclevels: 1
@@ -14,7 +13,7 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can use the Solaris Host Utilities 6.2 sample command reference for an end-to-end validation of the NetApp storage configuration using the host utilities tool.
+You can use the Solaris Host Utilities 6.2 sample command reference for an end-to-end validation of the ONTAP storage configuration using the host utilities tool.
 
 == List all host initiators mapped to host
 You can retrieve a list of all host initiators mapped to a host.
