--- a/hu_vsphere_6.adoc
+++ b/hu_vsphere_6.adoc
@@ -4,7 +4,6 @@ permalink: hu_vsphere_6.html
 keywords: host utilities, veritas, infoscale, 6.5. 6.7, netapp, ontap
 summary: Describes how to use Veritas Infoscale 6.5 and 6.7 for Linux with ONTAP
 ---
-
 = Use VMware vSphere 6.5 and 6.7 with ONTAP
 :hardbreaks:
 :toclevels: 1
@@ -27,7 +26,7 @@ include::_include/hu/reuse_hu_san_booting_steps.adoc[]
 
 ESXi provides an extensible multipathing module called Native Multipathing Plug-In (NMP) that manages the sub-plugins Storage Array Type Plugins (SATPs), and Path Selection Plugins (PSPs). These SATP rules are available by default in ESXi.
 
-For NetApp ONTAP storage, VMW_SATP_ALUA plugin is used by default with `VMW_PSP_RR`  as a path selection policy (PSP). This can be confirmed by using the below command:
+For ONTAP storage, VMW_SATP_ALUA plugin is used by default with `VMW_PSP_RR`  as a path selection policy (PSP). This can be confirmed by using the below command:
 
 
 *`esxcli storage nmp satp rule list -s VMW_SATP_ALUA`*
@@ -149,7 +148,7 @@ Standard requirements and best practices for SAN environments apply when using v
 
 NOTE: You must deploy ONTAP tools for VMware vSphere to enable the VASA Provider. The VASA Provider will manage all of your igroup settings for you, so there is no need to create or manage iGroups in a vVols environment.
 
-NetApp does not recommend changing any vVols settings from default at this time.
+NetApp doesn't recommend changing any vVols settings from default at this time.
 
 Refer to the https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] for specific versions of ONTAP tools, or legacy VASA Provider for your specific versions of vSphere and ONTAP.
 
@@ -195,7 +194,7 @@ max.throttle = 32
 min.throttle = 8
 |===
 
-=== Validating the vSphere tunable
+=== Validate the vSphere tunable
 
 Use the following command to verify the `HardwareAcceleratedLocking` setting:
 
@@ -213,7 +212,7 @@ Use the following command to verify the `HardwareAcceleratedLocking` setting:
    Description: Enable hardware accelerated VMFS locking (requires compliant hardware). Please see http://kb.vmware.com/kb/2094604 before disabling this option.
 ----
 
-=== Validating the Disk IOPs setting
+=== Validate the Disk IOPs setting
 
 Use the following command to verify the IOPs setting:
 
@@ -230,7 +229,7 @@ naa.600a098038304731783f506670553355
    Is USB: false
 ----
 
-=== Validating the QFullSampleSize
+=== Validate the QFullSampleSize
 
 Use the following command to verify the QFullSampleSize:
 
