--- a/hu_wuhu_troubleshoot.adoc
+++ b/hu_wuhu_troubleshoot.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_wuhu_troubleshoot.html
 keywords: windows, host, utilities, 7.1, hba, fibre, channel, SANtricity, netapp, san, host, e-series, platform
-summary: Windows Unified Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
+summary: Windows Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
 ---
 
 = Troubleshoot
@@ -25,7 +25,7 @@ The following is a list of the different areas you can investigate for potential
 * If applications using the LUNs display errors on startup, verify that the applications are configured to depend on the iSCSI service.
 * For FC paths to storage controllers running ONTAP, verify that the FC switches are zoned using the WWPNs of the target LIFs, not the WWPNs of the physical ports on the node.
 * Review the link:hu_wuhu_71_rn.html[Release Notes] for Windows Host Utilities to check for known issues. The Release Notes include a list of known issues and limitations.
-* Review the troubleshooting information in the SAN Administration Guide for your version of ONTAP.
+* Review the troubleshooting information in the https://docs.netapp.com/us-en/ontap/san-admin/index.html[ONTAP SAN administration^] documentation.
 * Search https://mysupport.netapp.com/site/bugs-online/product[NetApp Bugs Online^] for recently discovered issues.
 ** In the Bug Type field under Advanced Search, select *iSCSI - Windows* and then select *Go*. You should repeat the search for Bug Type *FCP -Windows*.
 * Collect information about your system.
