--- a/hu_wuhu_upgrade.adoc
+++ b/hu_wuhu_upgrade.adoc
@@ -2,10 +2,10 @@
 sidebar: sidebar
 permalink: hu_wuhu_upgrade.html
 keywords: windows, host, utilities, 7.1, hba, fibre, channel, SANtricity, netapp, san, host, e-series, platform
-summary: Windows Unified Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
+summary: Windows Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
 ---
 
-= Upgrade the Windows Unified Host Utilities
+= Upgrade the Windows Host Utilities
 :toc: macro
 :hardbreaks:
 :toclevels: 1
