--- a/legal_notices.adoc
+++ b/legal_notices.adoc
@@ -22,7 +22,7 @@ http://www.netapp.com/us/legal/copyright.aspx
 
 == Trademarks
 
-NETAPP, the NETAPP logo, and the marks listed on the NetApp Trademarks page are trademarks of NetApp, Inc. Other company and product names may be trademarks of their respective owners.
+NETAPP, the NETAPP logo, and the marks listed on the NetApp Trademarks page are trademarks of NetApp, Inc. Other company and product names might be trademarks of their respective owners.
 
 http://www.netapp.com/us/legal/netapptmlist.aspx
 
