updates to Host Utilities capitilzation

--- a/hu_aix_61_cmd.adoc
+++ b/hu_aix_61_cmd.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_aix_61_cmd.html
 keywords: host utilities, aix, powervm, vios, 3.1, 7.2, 7.0, netapp, ontap
-summary: You can use the AIX Host Utilities sample command reference for an end-to-end validation of the NetApp storage configuration using the host utilities tool.
+summary: You can use the AIX Host Utilities sample command reference for an end-to-end validation of the NetApp storage configuration using the Host Utilities tool.
 ---
 = AIX Host Utilities sample command reference
 :hardbreaks:
@@ -14,7 +14,7 @@ summary: You can use the AIX Host Utilities sample command reference for an end-
 
 [.lead]
 
-You can use the AIX Host Utilities sample command reference for an end-to-end validation of the NetApp storage configuration using the host utilities tool.
+You can use the AIX Host Utilities sample command reference for an end-to-end validation of the NetApp storage configuration using the Host Utilities tool.
 
 == List all host initiators mapped to host
 
