--- a/hu_hpux_60_rn.adoc
+++ b/hu_hpux_60_rn.adoc
@@ -21,5 +21,5 @@ The HP-UX Host Utilities 6.0 continues to support the following versions:
 * HP-UX 11iv2
 * HP-UX 11iv3
 
-There are no new features, enhancements, known limitations, or cautions for the HP-UX host utilities 6.0 release.
+There are no new features, enhancements, known limitations, or cautions for the HP-UX Host Utilities 6.0 release.
 
