--- a/hu_solaris_113.adoc
+++ b/hu_solaris_113.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_solaris_113.html
 keywords: host utilities, solaris, 113, netapp, ontap
-summary: Describes how to install the solaris host utilities
+summary: Describes how to install the solaris Host Utilities
 ---
 
 = Use Solaris 11.3 with ONTAP
