--- a/hu_solaris_62.adoc
+++ b/hu_solaris_62.adoc
@@ -16,7 +16,7 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 [.lead]
 The Solaris Unified Host Utilities assists you in managing NetApp ONTAP storage attached to a Solaris host.
 
-The Solaris Host Utilities 6.2 supports several Solaris environments and multiple protocols. The primary host utilities environments are: 
+The Solaris Host Utilities 6.2 supports several Solaris environments and multiple protocols. The primary Host Utilities environments are: 
 
 * Native OS with MPxIO with either the Fibre Channel (FC) or iSCSI protocol on a system using either a SPARC processor or an x86/64 processor.
 * Veritas Dynamic Multipathing (DMP) with either the FC or iSCSI protocol on a system using a SPARC processor, or the iSCSI protocol on a system using an x86/64 processor.
