--- a/hu_solaris_62_rn.adoc
+++ b/hu_solaris_62_rn.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: hu_solaris_62_rn.html
-keywords: host utilities, solaris, 6.2 netapp, ontap
+keywords: Host Utilities, solaris, 6.2 netapp, ontap
 summary: Release Notes for Solaris Host Utilities 6.2
 ---
 
