--- a/hu_hpux_60_cmd.adoc
+++ b/hu_hpux_60_cmd.adoc
@@ -15,7 +15,7 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 
 
 [.lead]
-You can use the HP-UX Unified Host Utilities 6.0 sample command reference for an end-to-end validation of the NetApp storage configuration using the host utilities tool.
+You can use the HP-UX Unified Host Utilities 6.0 sample command reference for an end-to-end validation of the NetApp storage configuration using the Host Utilities tool.
 
 == List all host initiators mapped to host
 
