--- a/hu_ol_71.adoc
+++ b/hu_ol_71.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: hu_ol_71.html
-keywords: host utilities, oracle, linux, 7.1, netapp, ontap
+keywords: Host Utilities, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use Oracle Linux 7.1 with ONTAP
 ---
 
