--- a/hu_solaris_62_cmd.adoc
+++ b/hu_solaris_62_cmd.adoc
@@ -14,7 +14,7 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can use the Solaris Host Utilities 6.2 sample command reference for an end-to-end validation of the NetApp storage configuration using the host utilities tool.
+You can use the Solaris Host Utilities 6.2 sample command reference for an end-to-end validation of the NetApp storage configuration using the Host Utilities tool.
 
 == List all host initiators mapped to host
 You can retrieve a list of all host initiators mapped to a host.
