--- a/hu_wuhu_71_rn.adoc
+++ b/hu_wuhu_71_rn.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: hu_wuhu_71_rn.html
-keywords: host utilities, linux, 7.1, 7.2, netapp, ontap, release, notes
+keywords: Host Utilities, linux, 7.1, 7.2, netapp, ontap, release, notes
 summary: Release Notes for Windows Unified Host Utilities 
 ---
 
