--- a/overview.adoc
+++ b/overview.adoc
@@ -16,9 +16,9 @@ summary: This content provides distribution-specific guidance on how to configur
 [.lead]
 SAN hosts should be configured for multipathing and with specific parameters and settings critical for proper operation with ONTAP LUNs.  The host configuration varies depending on the host operating system and the protocol.  Correct configuration is important for best performance and successful failover. 
 
-You should configure your SAN hosts to use the NetApp SAN host utilities. SAN host utilities help you manage and monitor your LUNs and host bus adapters (HBAs). For example, you can use the SAN host utilities to retrieve a list of all LUNs mapped to a host or to see a list of all the attributes of a specific LUN mapped to a host. NetApp customer support can also use the SAN host utilities to gather information about your configuration if you have an issue that requires assistance.  
+You should configure your SAN hosts to use the NetApp SAN Host Utilities. SAN Host Utilities help you manage and monitor your LUNs and host bus adapters (HBAs). For example, you can use the SAN Host Utilities to retrieve a list of all LUNs mapped to a host or to see a list of all the attributes of a specific LUN mapped to a host. NetApp customer support can also use the SAN Host Utilities to gather information about your configuration if you have an issue that requires assistance.  
 
-NetApp recommends using the SAN host utilities software if it is available for your SAN host.  
+NetApp recommends using the SAN Host Utilities software if it is available for your SAN host.  
 
 If it is supported by your SAN configuration, you can also configure your host to use SAN booting for simplified deployment and improved scalability. Using SAN boot, you can deploy multiple new servers by connecting them to SAN and configuring the appropriate boot settings. This saves time by eliminating the need to install the operating system on each server individually. 
   
