--- a/hu_wuhu_72.adoc
+++ b/hu_wuhu_72.adoc
@@ -45,7 +45,7 @@ The following programs and files are installed on the Windows host computer. The
 |Displays the version of the Host Utilities and FC HBAs.
 |===
 
-The host utilities support different Windows host configurations, protocols, and multipathing options. For more information, see the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
+The Host Utilities support different Windows host configurations, protocols, and multipathing options. For more information, see the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
 
 
 == Verify your host and storage system configuration
